force-app/zurich-base/main/default/objects/Discount__c/Discount__c.object-meta.xml
<CustomObject>
    <label>Descuento</label>
    <nameField>
        <label>Nombre de Descuento</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Descuentos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>