force-app/zurich-base/main/default/objects/Discount__c/fields/DiscountAmount__c.field-meta.xml
<CustomField>
    <fullName>DiscountAmount__c</fullName>
    <label>Cantidad descuento</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>