force-app/zurich-base/main/default/objects/Discount__c/fields/DiscountId__c.field-meta.xml
<CustomField>
    <fullName>DiscountId__c</fullName>
    <externalId>true</externalId>
    <label>Id descuento</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>