force-app/zurich-base/main/default/objects/Discount__c/fields/DiscountIdNumber__c.field-meta.xml
<CustomField>
    <fullName>DiscountIdNumber__c</fullName>
    <label>DiscountIdNumber</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>