force-app/zurich-base/main/default/objects/Discount__c/fields/DiscountPct__c.field-meta.xml
<CustomField>
    <fullName>DiscountPct__c</fullName>
    <label>Porcentaje descuento</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>