force-app/zurich-base/main/default/objects/Discount__c/fields/Policy__c.field-meta.xml
<CustomField>
    <fullName>Policy__c</fullName>
    <label>Póliza</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Descuentos</relationshipLabel>
    <relationshipName>Descuentos</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>