force-app/zurich-base/main/default/objects/Discount__c/fields/Updated__c.field-meta.xml
<CustomField>
    <fullName>Updated__c</fullName>
    <description>Field to determine if the object is updated. In case processing time is different from Order, it will be deleted</description>
    <formula>Processing_Timestamp__c == Policy__r.Processing_Timestamp__c || ( ISBLANK(Processing_Timestamp__c) &amp;&amp; ISBLANK(Policy__r.Processing_Timestamp__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Updated</label>
    <type>Checkbox</type>
</CustomField>